# toon

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  package.json
.github/workflows/: ci.yml  release.yml
.red/: CONTEXT.md  config.yaml
.red/adr/: 0001-own-filter-engine-over-embedding-jaq.md  0002-lazy-zero-copy-document-model.md  0003-reddb-style-release-with-lockstep-crate-publishing.md  0004-mit-license.md
.red/researches/: toonl-jsonl-use-cases.md  toonl-toon-compat.md
benchmarks/: README.md
benchmarks/datasets/: MANIFEST.md
benchmarks/results/: 2026-07-15-token-efficiency.md  runtime-performance-js.md
crates/toon/: Cargo.toml
crates/toon/src/: lib.rs
crates/toon/src/lib_parts/: core.rs  tabular_encoder.rs  toonl_and_cyclic_decode.rs
crates/toon/tests/: spec_conformance.rs
crates/tq/: Cargo.toml  README.md
crates/tq/src/: main.rs
docs/: toon-reddb-spec.md  toon-spec-reddb-flavored.md  toon-spec.md  toonl-v0.2.md  toonl.md  upstream-feedback.md
docs/proposals/: README.md  child-tables-and-matrix.md  depth-guard.md  detect-truncation.md  keyed-map-collapse.md  primitive-array-columns.md  template.md
scripts/: criterion_baseline_report.mjs  discriminated_heterogeneous_arrays_prototype.mjs  generate_html_heavy_dataset.mjs  generate_wire_efficiency_corpora.mjs  research_token_benchmark.py  wire_efficiency_s3_prototype.mjs
tests/toon/: api.rs  json_limits.rs  spec_conformance.rs  wire_efficiency.rs
tests/tq/: behavior.rs
tests/truncation/: corpus.json
tests/wire-efficiency/: corpora.json  object-array-columns.json
(+10 files in other folders)
